syntax = "proto3";
package v1;

option go_package = "github.com/mephistolie/chefbook-backend-recipe/api/proto/v1";

import "v1/macronutrients.proto";
import "v1/ingredient.proto";
import "v1/cooking.proto";

message RecipeInput {
  optional string recipeId = 1;
  string userId = 2;
  string name = 3;
  string visibility = 4;
  bool isEncrypted = 5;
  string language = 6;
  optional string description = 7;

  repeated string tags = 8;

  optional int32 servings = 9;
  optional int32 cookingTime = 10;

  optional int32 calories = 11;
  optional Macronutrients macronutrients = 12;

  repeated IngredientItem ingredients = 13;
  repeated CookingItem cooking = 14;

  optional int32 version = 15;

  string userSubscription = 16;
}
